# smarthome_heater_msgs

./: .project  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
msg/: HeatingPilotAction.msg  HeatingPilotStateData.msg  HeatingStateData.msg  HeatingTemperatureSlot.msg  LogHeatingStateData.msg  SensorTemperatureStateData.msg
srv/: HeatingAddTimeSlot.srv  HeatingGetTimeSlots.srv  HeatingRemoveTimeSlot.srv  HeatingUpdatePid.srv
